k8s-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilekhomsan
  labels:
    app: profilekhomsan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profilekhomsan
  template:
    metadata:
      labels:
        app: profilekhomsan
    spec:
      containers:
        - name: profilekhomsan
          image: ghcr.io/khomsan146/profile:1.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: profilekhomsan-nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: profilekhomsan-service
spec:
  selector:
    app: profilekhomsan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profilekhomsan-ingress
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: profilekhomsan.tgks.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profilekhomsan-service
                port:
                  number: 80
